--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -490,6 +490,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   position: relative;
 }
 
+.sticky{
+  position: -webkit-sticky;
+  position: sticky;
+}
+
 .inset-0{
   top: 0px;
   right: 0px;
@@ -503,22 +508,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .left-1\/2{
   left: 50%;
-}
-
-.top-1\/4{
-  top: 25%;
-}
-
-.top-1\/3{
-  top: 33.333333%;
-}
-
-.top-3\.5{
-  top: 0.875rem;
-}
-
-.top-3{
-  top: 0.75rem;
 }
 
 .z-30{
@@ -541,14 +530,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin: auto;
 }
 
-.mx-3{
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-}
-
 .mx-5{
   margin-left: 1.25rem;
   margin-right: 1.25rem;
+}
+
+.mx-3{
+  margin-left: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 .my-3{
@@ -556,8 +545,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0.75rem;
 }
 
-.ml-4{
-  margin-left: 1rem;
+.ml-6{
+  margin-left: 1.5rem;
 }
 
 .mt-2{
@@ -572,12 +561,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 1rem;
 }
 
+.mt-16{
+  margin-top: 4rem;
+}
+
 .mt-20{
   margin-top: 5rem;
 }
 
+.mt-8{
+  margin-top: 2rem;
+}
+
 .mt-10{
   margin-top: 2.5rem;
+}
+
+.mb-10{
+  margin-bottom: 2.5rem;
 }
 
 .mt-3{
@@ -590,6 +591,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mb-2{
   margin-bottom: 0.5rem;
+}
+
+.mt-24{
+  margin-top: 6rem;
+}
+
+.ml-4{
+  margin-left: 1rem;
+}
+
+.mt-36{
+  margin-top: 9rem;
 }
 
 .block{
@@ -628,16 +641,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: auto;
 }
 
+.h-16{
+  height: 4rem;
+}
+
+.h-1{
+  height: 0.25rem;
+}
+
 .h-72{
   height: 18rem;
 }
 
-.h-20{
-  height: 5rem;
-}
-
-.h-screen{
-  height: 100vh;
+.h-96{
+  height: 24rem;
 }
 
 .min-h-screen{
@@ -648,6 +665,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 100%;
 }
 
+.w-8{
+  width: 2rem;
+}
+
 .w-10{
   width: 2.5rem;
 }
@@ -656,20 +677,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1.5rem;
 }
 
-.w-8{
-  width: 2rem;
-}
-
 .w-4{
   width: 1rem;
 }
 
-.w-72{
-  width: 18rem;
+.w-9{
+  width: 2.25rem;
 }
 
-.w-5{
-  width: 1.25rem;
+.w-9\/12{
+  width: 75%;
 }
 
 .w-auto{
@@ -684,6 +701,22 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .w-7{
   width: 1.75rem;
+}
+
+.w-10\/12{
+  width: 83.333333%;
+}
+
+.w-72{
+  width: 18rem;
+}
+
+.w-5{
+  width: 1.25rem;
+}
+
+.w-96{
+  width: 24rem;
 }
 
 .-translate-x-1\/2{
@@ -701,17 +734,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   transform: var(--tw-transform);
 }
 
+.transform{
+  transform: var(--tw-transform);
+}
+
 .grid-flow-row{
   grid-auto-flow: row;
-}
-
-.grid-flow-col{
-  grid-auto-flow: column;
-}
-
-.auto-rows-max{
-  grid-auto-rows: -webkit-max-content;
-  grid-auto-rows: max-content;
 }
 
 .grid-cols-1{
@@ -750,8 +778,17 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 0.25rem;
 }
 
+.gap-y-10{
+  row-gap: 2.5rem;
+}
+
 .gap-y-3{
   row-gap: 0.75rem;
+}
+
+.gap-x-5{
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
 }
 
 .justify-self-start{
@@ -762,12 +799,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 0.25rem;
 }
 
-.rounded-3xl{
-  border-radius: 1.5rem;
-}
-
-.rounded-lg{
-  border-radius: 0.5rem;
+.rounded-md{
+  border-radius: 0.375rem;
 }
 
 .rounded-xl{
@@ -778,6 +811,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-radius: 1rem;
 }
 
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+
 .border-b-2{
   border-bottom-width: 2px;
 }
@@ -786,14 +827,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-color: transparent;
 }
 
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .bg-bgNavbar{
   --tw-bg-opacity: 1;
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
+}
+
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-greenContactUs{
@@ -819,12 +860,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-attachment: local;
 }
 
-.bg-left-top{
-  background-position: left top;
-}
-
 .bg-left{
   background-position: left;
+}
+
+.bg-left-top{
+  background-position: left top;
 }
 
 .bg-no-repeat{
@@ -841,16 +882,16 @@ Ensure the default browser behavior of the `hidden` attribute.
      object-position: center;
 }
 
+.p-3{
+  padding: 0.75rem;
+}
+
 .p-8{
   padding: 2rem;
 }
 
 .p-4{
   padding: 1rem;
-}
-
-.p-3{
-  padding: 0.75rem;
 }
 
 .py-3{
@@ -873,9 +914,19 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.5rem;
 }
 
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-5{
@@ -883,8 +934,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 1.25rem;
 }
 
-.pl-2{
-  padding-left: 0.5rem;
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-14{
+  padding-top: 3.5rem;
+  padding-bottom: 3.5rem;
 }
 
 .pt-4{
@@ -907,6 +964,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 3.5rem;
 }
 
+.pl-2{
+  padding-left: 0.5rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -927,9 +992,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-family: Montserrat;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
 }
 
 .text-xl{
@@ -942,19 +1007,29 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .font-semibold{
@@ -973,12 +1048,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-weight: 800;
 }
 
-.font-bold{
-  font-weight: 700;
-}
-
 .font-normal{
   font-weight: 400;
+}
+
+.font-bold{
+  font-weight: 700;
 }
 
 .uppercase{
@@ -1003,19 +1078,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(97 206 112 / var(--tw-text-opacity));
 }
 
-.text-greenOurProduct{
+.text-black{
   --tw-text-opacity: 1;
-  color: rgb(153 227 105 / var(--tw-text-opacity));
-}
-
-.text-blackText{
-  --tw-text-opacity: 1;
-  color: rgb(17 17 23 / var(--tw-text-opacity));
-}
-
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-blackSeeDetails{
@@ -1023,9 +1088,24 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(18 18 35 / var(--tw-text-opacity));
 }
 
+.text-blackText{
+  --tw-text-opacity: 1;
+  color: rgb(17 17 23 / var(--tw-text-opacity));
+}
+
 .text-supportBy{
   --tw-text-opacity: 1;
   color: rgb(145 151 159 / var(--tw-text-opacity));
+}
+
+.text-greenOurProduct{
+  --tw-text-opacity: 1;
+  color: rgb(153 227 105 / var(--tw-text-opacity));
+}
+
+.text-gray-300{
+  --tw-text-opacity: 1;
+  color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
 .text-opacity-80{
@@ -1079,12 +1159,148 @@ Ensure the default browser behavior of the `hidden` attribute.
   }
 }
 
-.hover\:w-10:hover{
-  width: 2.5rem;
+.hover\:w-8:hover{
+  width: 2rem;
 }
 
 .hover\:w-9:hover{
   width: 2.25rem;
+}
+
+.hover\:w-10:hover{
+  width: 2.5rem;
+}
+
+.hover\:scale-125:hover{
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: var(--tw-transform);
+}
+
+.hover\:-scale-95:hover{
+  --tw-scale-x: -.95;
+  --tw-scale-y: -.95;
+  transform: var(--tw-transform);
+}
+
+.hover\:-scale-105:hover{
+  --tw-scale-x: -1.05;
+  --tw-scale-y: -1.05;
+  transform: var(--tw-transform);
+}
+
+.hover\:scale-100:hover{
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: var(--tw-transform);
+}
+
+.hover\:scale-105:hover{
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: var(--tw-transform);
+}
+
+.hover\:scale-110:hover{
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: var(--tw-transform);
+}
+
+.hover\:scale-x-100:hover{
+  --tw-scale-x: 1;
+  transform: var(--tw-transform);
+}
+
+.hover\:-scale-x-50:hover{
+  --tw-scale-x: -.5;
+  transform: var(--tw-transform);
+}
+
+@-webkit-keyframes bounce{
+  0%, 100%{
+    transform: translateY(-25%);
+    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
+            animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50%{
+    transform: none;
+    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
+            animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+
+@keyframes bounce{
+  0%, 100%{
+    transform: translateY(-25%);
+    -webkit-animation-timing-function: cubic-bezier(0.8,0,1,1);
+            animation-timing-function: cubic-bezier(0.8,0,1,1);
+  }
+
+  50%{
+    transform: none;
+    -webkit-animation-timing-function: cubic-bezier(0,0,0.2,1);
+            animation-timing-function: cubic-bezier(0,0,0.2,1);
+  }
+}
+
+.hover\:animate-bounce:hover{
+  -webkit-animation: bounce 1s infinite;
+          animation: bounce 1s infinite;
+}
+
+@-webkit-keyframes spin{
+  to{
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes spin{
+  to{
+    transform: rotate(360deg);
+  }
+}
+
+.hover\:animate-spin:hover{
+  -webkit-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
+}
+
+@-webkit-keyframes ping{
+  75%, 100%{
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+@keyframes ping{
+  75%, 100%{
+    transform: scale(2);
+    opacity: 0;
+  }
+}
+
+.hover\:animate-ping:hover{
+  -webkit-animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+          animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
+}
+
+@-webkit-keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+@keyframes pulse{
+  50%{
+    opacity: .5;
+  }
+}
+
+.hover\:animate-pulse:hover{
+  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 .hover\:bg-bgNavbar:hover{
@@ -1101,14 +1317,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 0.8;
 }
 
-.hover\:text-2xl:hover{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .hover\:text-base:hover{
   font-size: 1rem;
   line-height: 1.5rem;
+}
+
+.hover\:text-2xl:hover{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .hover\:text-greenAgro:hover{
@@ -1139,13 +1355,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 2rem;
   }
 
+  .md\:grid-flow-row{
+    grid-auto-flow: row;
+  }
+
   .md\:grid-flow-col{
     grid-auto-flow: column;
   }
 
-  .md\:auto-rows-max{
-    grid-auto-rows: -webkit-max-content;
-    grid-auto-rows: max-content;
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .md\:grid-cols-2{
@@ -1175,6 +1394,11 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 1.75rem;
   }
 
+  .md\:text-lg{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
   .md\:text-2xl{
     font-size: 1.5rem;
     line-height: 2rem;
@@ -1187,6 +1411,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 1024px){
+  .lg\:ml-4{
+    margin-left: 1rem;
+  }
+
   .lg\:mt-0{
     margin-top: 0px;
   }
@@ -1195,20 +1423,36 @@ Ensure the default browser behavior of the `hidden` attribute.
     margin-left: 0px;
   }
 
+  .lg\:mt-20{
+    margin-top: 5rem;
+  }
+
   .lg\:mt-24{
     margin-top: 6rem;
+  }
+
+  .lg\:mt-16{
+    margin-top: 4rem;
+  }
+
+  .lg\:mt-28{
+    margin-top: 7rem;
+  }
+
+  .lg\:mt-36{
+    margin-top: 9rem;
+  }
+
+  .lg\:mt-5{
+    margin-top: 1.25rem;
   }
 
   .lg\:mt-72{
     margin-top: 18rem;
   }
 
-  .lg\:mt-20{
-    margin-top: 5rem;
-  }
-
-  .lg\:mt-28{
-    margin-top: 7rem;
+  .lg\:mt-32{
+    margin-top: 8rem;
   }
 
   .lg\:block{
@@ -1247,32 +1491,44 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: auto;
   }
 
-  .lg\:w-full{
-    width: 100%;
+  .lg\:w-9{
+    width: 2.25rem;
   }
 
-  .lg\:w-10{
-    width: 2.5rem;
+  .lg\:w-full{
+    width: 100%;
   }
 
   .lg\:w-16{
     width: 4rem;
   }
 
+  .lg\:w-8\/12{
+    width: 66.666667%;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
   .lg\:w-7{
     width: 1.75rem;
   }
 
-  .lg\:w-8{
-    width: 2rem;
+  .lg\:w-72{
+    width: 18rem;
   }
 
-  .lg\:w-9{
-    width: 2.25rem;
+  .lg\:grid-flow-row{
+    grid-auto-flow: row;
   }
 
   .lg\:grid-flow-col{
     grid-auto-flow: column;
+  }
+
+  .lg\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:grid-cols-2{
@@ -1319,11 +1575,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-bottom: 1rem;
   }
 
-  .lg\:px-0{
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
   .lg\:px-5{
     padding-left: 1.25rem;
     padding-right: 1.25rem;
@@ -1332,6 +1583,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   .lg\:px-12{
     padding-left: 3rem;
     padding-right: 3rem;
+  }
+
+  .lg\:px-96{
+    padding-left: 24rem;
+    padding-right: 24rem;
+  }
+
+  .lg\:px-72{
+    padding-left: 18rem;
+    padding-right: 18rem;
   }
 
   .lg\:px-28{
@@ -1344,6 +1605,15 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-bottom: 2rem;
   }
 
+  .lg\:px-0{
+    padding-left: 0px;
+    padding-right: 0px;
+  }
+
+  .lg\:pl-0{
+    padding-left: 0px;
+  }
+
   .lg\:pt-0{
     padding-top: 0px;
   }
@@ -1352,8 +1622,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-bottom: 0px;
   }
 
-  .lg\:pl-0{
-    padding-left: 0px;
+  .lg\:pt-16{
+    padding-top: 4rem;
   }
 
   .lg\:pr-28{
@@ -1362,6 +1632,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:text-left{
     text-align: left;
+  }
+
+  .lg\:text-center{
+    text-align: center;
   }
 
   .lg\:text-6xl{
@@ -1384,8 +1658,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 2rem;
   }
 
-  .lg\:text-xl{
-    font-size: 1.25rem;
+  .lg\:text-lg{
+    font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
@@ -1394,14 +1668,19 @@ Ensure the default browser behavior of the `hidden` attribute.
     line-height: 2.5rem;
   }
 
-  .lg\:text-gray-300{
-    --tw-text-opacity: 1;
-    color: rgb(209 213 219 / var(--tw-text-opacity));
+  .lg\:text-xl{
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 
   .lg\:text-blackText{
     --tw-text-opacity: 1;
     color: rgb(17 17 23 / var(--tw-text-opacity));
+  }
+
+  .lg\:text-gray-300{
+    --tw-text-opacity: 1;
+    color: rgb(209 213 219 / var(--tw-text-opacity));
   }
 
   .lg\:hover\:border-greenAgro:hover{
