--- a/tailwind/output.css
+++ b/tailwind/output.css
@@ -810,6 +810,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   grid-auto-flow: row;
 }
 
+.grid-flow-col{
+  grid-auto-flow: column;
+}
+
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -820,6 +824,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-5{
+  grid-template-rows: repeat(5, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1321,6 +1329,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(19 19 19 / var(--tw-bg-opacity));
 }
 
+@media (min-width: 640px){
+  .sm\:rounded-xl{
+    border-radius: 0.75rem;
+  }
+}
+
 @media (min-width: 768px){
   .md\:ml-28{
     margin-left: 7rem;
@@ -1374,8 +1388,12 @@ Ensure the default browser behavior of the `hidden` attribute.
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
-  .md\:grid-rows-1{
-    grid-template-rows: repeat(1, minmax(0, 1fr));
+  .md\:grid-cols-3{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .md\:grid-cols-1{
+    grid-template-columns: repeat(1, minmax(0, 1fr));
   }
 
   .md\:px-6{
@@ -1582,6 +1600,14 @@ Ensure the default browser behavior of the `hidden` attribute.
     width: 10rem;
   }
 
+  .lg\:w-32{
+    width: 8rem;
+  }
+
+  .lg\:w-24{
+    width: 6rem;
+  }
+
   .lg\:w-7{
     width: 1.75rem;
   }
@@ -1612,10 +1638,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:grid-cols-1{
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .lg\:grid-rows-1{
-    grid-template-rows: repeat(1, minmax(0, 1fr));
   }
 
   .lg\:items-center{
@@ -1781,6 +1803,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   .lg\:text-gray-300{
     --tw-text-opacity: 1;
     color: rgb(209 213 219 / var(--tw-text-opacity));
+  }
+
+  .lg\:hover\:scale-110:hover{
+    --tw-scale-x: 1.1;
+    --tw-scale-y: 1.1;
+    transform: var(--tw-transform);
   }
 
   .lg\:hover\:border-greenAgro:hover{
